# dd-python

./: .cruft.json  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
src/smartschedule/allocation/: allocated_capability.py  allocation_facade.py  allocations.py  demand.py  demands.py  project.py  projects.py
src/smartschedule/optimization/: item.py  optimization_facade.py  result.py  total_capacity.py  total_weight.py  weight_dimension.py
src/smartschedule/planning/parallelization/: parallel_stages.py  parallel_stages_list.py  sorted_nodes_to_parallelized_stages.py  stage.py  stage_parallelization.py  stages_to_nodes.py
src/smartschedule/shared/: supplier.py  time_slot.py
src/smartschedule/simulation/: additional_priced_capability.py  available_resource_capability.py  capability.py  demand.py  demands.py  project_id.py  result.py  simulated_capabilities.py  simulated_project.py  simulation_facade.py  time_slot.py
src/smartschedule/sorter/: feedback_arc_se_on_graph.py  graph_topological_sort.py  node.py  nodes.py  sorted_nodes.py
tests/allocation/: test_potential_transfer_scenarios.py
tests/optimization/: capability_capacity_dimension.py  test_optimization.py  test_optimization_for_timed_capabilities.py
tests/planning/parallelization/: test_parallelization.py
tests/shared/timeslot/: test_time_slot.py
tests/simulation/: available_capabilities_builder.py  simulated_projects_builder.py  test_simulation_scenarios.py
tests/sorter/: test_feedback_arc_set_on_graph.py  test_graph_topological_sort.py
